--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,7 +2,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Noto Sans", sans-serif;
+    font-family: "roboto", sans-serif;
+
 }
 
 body{
